changed stream toList method to collector as it caused fails building project